--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.10",
+    "macaddress": "^0.2.9",
     "mime": "^2.3.1",
     "mime-db": "^1.35.0",
     "node-mime": "^1.0.0",
@@ -48,9 +49,11 @@
     "react-test-renderer": "^16.5.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sshpk": "^1.14.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
+    "url-parse": "^1.4.3",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.7.1",
     "webpack-manifest-plugin": "1.2.1",
